--- a/src/app/styles/utils/vars/colors.scss
+++ b/src/app/styles/utils/vars/colors.scss
@@ -1,3 +1,8 @@
 :root {
   --white: #fff;
+  --grey: rgb(238 238 238);
+  --grey-middle: rgb(90 78 78);
+  --dark-green: #025f65;
+  --middle-green: #9bcfae;
+  --dark: #231f1f;
 }
