added news view page

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -5,3 +5,4 @@
 @import '../../entities/entities.scss';
 @import '../../pages/pages.scss';
 @import '../../widgets/widgets.scss';
+@import '../../features/features.scss';
