--- a/src/entities/entities.scss
+++ b/src/entities/entities.scss
@@ -1,2 +1,3 @@
 @import './News/ui/Card/Card.scss';
 @import './News/ui/ListCards/ListCards.scss';
+@import './News/ui/NewsViewCard/NewsViewCard.scss';
