--- a/src/entities/News/ui/Card/Card.scss
+++ b/src/entities/News/ui/Card/Card.scss
@@ -29,6 +29,10 @@
     color: var(--dark);
     font-size: 16px;
     font-weight: 600;
+    &:hover {
+      color: var(--dark-green);
+      cursor: pointer;
+    }
   }
   &__anons {
     color: var(--grey-middle);
