--- a/src/app/styles/utils/reset.scss
+++ b/src/app/styles/utils/reset.scss
@@ -1,4 +1,4 @@
-//** * Modern CSS Reset Tweaks * ================================================== */
+/** * Modern CSS Reset Tweaks  */
 html {
   -webkit-text-size-adjust: 100%;
 
