--- a/src/entities/News/ui/NewsViewCard/NewsViewCard.scss
+++ b/src/entities/News/ui/NewsViewCard/NewsViewCard.scss
@@ -8,4 +8,21 @@
     word-wrap: break-word;
     word-break: break-all;
   }
+  &__image {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: var(--middle-green);
+    &-button {
+      top: 50%;
+      left: 50%;
+      z-index: 10;
+      cursor: pointer;
+    }
+  }
+  &__close {
+    top: 10px;
+    right: 10px;
+    z-index: 2;
+  }
 }
